deploy/base/payments.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: payments
spec:
  selector:
    app: payments
  ports:
    - name: http
      protocol: TCP
      port: 1800
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  labels:
    app: payments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      serviceAccountName: payments
      containers:
        - name: payments
          image: hashicorpdemoapp/payments:v0.0.16
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
