deploy/base/public-api.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: public-api-service
  labels:
    app: public-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: public-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api
spec:
  replicas: 1
  selector:
    matchLabels:
      service: public-api
      app: public-api
  template:
    metadata:
      labels:
        service: public-api
        app: public-api
    spec:
      containers:
        - name: public-api
          image: hashicorpdemoapp/public-api:v0.0.1
          ports:
            - containerPort: 8080
